--- a/less/about.less
+++ b/less/about.less
@@ -1,25 +1,45 @@
+.about-page {
 
-.container {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column; 
+  .flex(column,center,center);
+  font-family: @quicksand;
 
-    h4 {
-        margin-top: 5%;
-        font-size: 23px;
-      }
-    
-      h5 {
-        margin-top: 3%;
-        font-size: 18px;
-      }
-      p {
-        margin-top: 6%;
-        font-size: 14px;
-      }
-    
-      img {
-        height: auto;
-        width: 100%;
-      }
+  .team-title {
+    width: 75%;
+    text-align: center;
+    margin: 30px auto 0px;
+    p {
+      margin-top: 20px;
+    }
   }
+
+  .team-box {
+    .flex(column, center, center);
+    h3 {
+      font-size: 2rem;
+      font-family: @quicksand;
+      margin: 50px auto 20px;
+    }
+    h4 {
+      margin: 10px;
+      font-size: 1.5rem;
+      font-family: @quicksand;
+    }
+    .team {
+      .flex(row, center, flex-start);
+      .teammate {
+        .flex(column,center,center);
+        margin: 15px;
+        width: 30%;
+        .headshot {
+          width: 100%;
+        }
+        p {
+          width: 100%;
+          margin-top: 5px;
+          font-size: 1rem;
+          text-align: justify;
+        }
+      }
+    }
+  } 
+}
