--- a/less/global.less
+++ b/less/global.less
@@ -1,9 +1,9 @@
 html {
-    text-size: 10px;
     width: 70%;
     max-width: 1000px;
     margin: 0 auto;
     background-image: linear-gradient(to bottom right, @bg-color, #e9a195);
+    background-repeat: none;
 
     @media @max800 {
         width: 90%;
@@ -14,14 +14,15 @@ html {
     }
 
     body {
-        background: aqua; 
-        .flex(column, center, center);
+        .flex(column,center,center);
         background-color: white;
         padding: 30px;
 
-        h1 {
+        h1, h2, h3, h4, h5 {
             font-size: 2.8rem;
             font-family: @dancing;
+            font-weight: bold;
+            color: @accent2;
         }
     }
 }
