--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,3 +1,4 @@
+    
 .navbar {
     .flex(row, space-between, flex-end);
     width: 100%;
@@ -13,6 +14,14 @@
         .flex(row, space-around, center);
         height: 75px;
         margin: 0px 30px;
+    }
+
+    .logo-text {
+        text-decoration: none;
+        font-family: @dancing;
+        font-size: 2rem;
+        font-weight: bold;
+        color: @accent2;
     }
 
     .nav {
